Fix Zed extension structure to match official documentation
Corrections based on https://zed.dev/docs/extensions/languages:

1. **Directory Structure**:
   - Moved config from languages/dash.toml to languages/dash/config.toml
   - Moved query files to languages/dash/ alongside config.toml
   - Removed nested queries/dash/ directory structure

2. **Extension Configuration**:
   - Updated extension.toml to use 'rev' instead of 'commit' for grammar
   - Used specific commit hash instead of 'main' branch
   - Removed premature language server configuration

3. **Language Configuration**:
   - Simplified config.toml to required fields only
   - Removed complex bracket/autoclose configuration
   - Added standard tab_size and hard_tabs settings

4. **Query Files**:
   - Added brackets.scm for bracket matching
   - Simplified all query files to use conservative patterns
   - Focused on basic tree-sitter node types likely to exist
   - Removed complex syntax-specific patterns until grammar is verified

5. **Grammar Integration**:
   - Proper repository URL and path specification
   - Specific commit hash for reproducible builds
   - Uses existing treesitter/ directory in this repository

The extension now follows Zed's official structure and should load correctly
in the Zed editor with basic syntax highlighting and editor features.

Signed-off-by: Alex Suraci <suraci.alex@gmail.com>

--- a/zed-dash/extension.toml
+++ b/zed-dash/extension.toml
@@ -6,12 +6,8 @@ schema_version = 1
 authors = ["Claude <noreply@anthropic.com>"]
 repository = "https://github.com/vito/dash"
 
-[language_servers.dash-language-server]
-name = "Dash Language Server"
-languages = ["Dash"]
-
 [[grammar]]
 name = "dash"
 repository = "https://github.com/vito/dash"
 path = "treesitter"
-commit = "main"
+rev = "331706ee137f06026d34c70b162f912114979e98"
