fix tree-sitter parsing, allow trailing comma
* something about the separator/whitespace handling was throwing off the
  parser, refactored it to be simpler anyway and now it works
* fix Seq/Choice with single members, which was preventing tokens like
  'null' from taking priority over symbol_or_call

Signed-off-by: Alex Suraci <suraci.alex@gmail.com>

--- a/hack/build
+++ b/hack/build
@@ -6,7 +6,7 @@ pvt src = host.directory(
     "**/*.go",
     "**/go.mod",
     "**/go.sum",
-    "introspection/introspection.graphql"
+    "introspection/introspection.graphql",
   ]
 )
 
