--- a/treesitter/CMakeLists.txt
+++ b/treesitter/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(tree-sitter-bind
+project(tree-sitter-sprout
         VERSION "0.1.0"
-        DESCRIPTION "Bind grammar for tree-sitter"
-        HOMEPAGE_URL "https://github.com/tree-sitter/tree-sitter-bind"
+        DESCRIPTION "Sprout grammar for tree-sitter"
+        HOMEPAGE_URL "https://github.com/vito/sprout"
         LANGUAGES C)
 
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
@@ -26,40 +26,40 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/src/parser.c"
                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
                    COMMENT "Generating parser.c")
 
-add_library(tree-sitter-bind src/parser.c)
+add_library(tree-sitter-sprout src/parser.c)
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.c)
-  target_sources(tree-sitter-bind PRIVATE src/scanner.c)
+  target_sources(tree-sitter-sprout PRIVATE src/scanner.c)
 endif()
-target_include_directories(tree-sitter-bind
+target_include_directories(tree-sitter-sprout
                            PRIVATE src
                            INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/bindings/c>
                                      $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 
-target_compile_definitions(tree-sitter-bind PRIVATE
+target_compile_definitions(tree-sitter-sprout PRIVATE
                            $<$<BOOL:${TREE_SITTER_REUSE_ALLOCATOR}>:TREE_SITTER_REUSE_ALLOCATOR>
                            $<$<CONFIG:Debug>:TREE_SITTER_DEBUG>)
 
-set_target_properties(tree-sitter-bind
+set_target_properties(tree-sitter-sprout
                       PROPERTIES
                       C_STANDARD 11
                       POSITION_INDEPENDENT_CODE ON
                       SOVERSION "${TREE_SITTER_ABI_VERSION}.${PROJECT_VERSION_MAJOR}"
                       DEFINE_SYMBOL "")
 
-configure_file(bindings/c/tree-sitter-bind.pc.in
-               "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-bind.pc" @ONLY)
+configure_file(bindings/c/tree-sitter-sprout.pc.in
+               "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-sprout.pc" @ONLY)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bindings/c/tree_sitter"
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
         FILES_MATCHING PATTERN "*.h")
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-bind.pc"
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-sprout.pc"
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
-install(TARGETS tree-sitter-bind
+install(TARGETS tree-sitter-sprout
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 
 file(GLOB QUERIES queries/*.scm)
 install(FILES ${QUERIES}
-        DESTINATION "${CMAKE_INSTALL_DATADIR}/tree-sitter/queries/bind")
+        DESTINATION "${CMAKE_INSTALL_DATADIR}/tree-sitter/queries/sprout")
 
 add_custom_target(ts-test "${TREE_SITTER_CLI}" test
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
