--- a/treesitter/Cargo.toml
+++ b/treesitter/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "tree-sitter-bind"
-description = "Bind grammar for tree-sitter"
+name = "tree-sitter-sprout"
+description = "Sprout grammar for tree-sitter"
 version = "0.0.1"
 authors = [
   "Alex Suraci <suraci.alex@gmail.com>",
@@ -8,9 +8,9 @@ authors = [
 ]
 license = "MIT"
 readme = "bindings/rust/README.md"
-keywords = ["incremental", "parsing", "bind"]
+keywords = ["incremental", "parsing", "sprout"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/vito/bind"
+repository = "https://github.com/vito/sprout"
 edition = "2021"
 autoexamples = false
 
