--- a/treesitter/bindings/c/tree-sitter-bind.pc.in
+++ b/treesitter/bindings/c/tree-sitter-bind.pc.in
@@ -2,9 +2,9 @@ prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
-Name: tree-sitter-bind
+Name: tree-sitter-sprout
 Description: @PROJECT_DESCRIPTION@
 URL: @PROJECT_HOMEPAGE_URL@
 Version: @PROJECT_VERSION@
-Libs: -L${libdir} -ltree-sitter-bind
+Libs: -L${libdir} -ltree-sitter-sprout
 Cflags: -I${includedir}
