zed: LSP support
Signed-off-by: Alex Suraci <suraci.alex@gmail.com>

--- a/zed-dang/extension.toml
+++ b/zed-dang/extension.toml
@@ -10,3 +10,7 @@ repository = "https://github.com/vito/dang"
 repository = "https://github.com/vito/dang"
 commit = "22b03404bb4c507cbff0b7670ab1ef72a2a44542"
 path = "treesitter"
+
+[language_servers.dang-lsp]
+name = "Dang LSP"
+languages = ["Dang"]
