--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pkg/lsp/testdata/bundle/nvim-lspconfig"]
-	path = pkg/lsp/testdata/bundle/nvim-lspconfig
-	url = https://github.com/neovim/nvim-lspconfig
+[submodule "editors/nvim"]
+	path = editors/nvim
+	url = https://codeberg.org/vito/dang.nvim
