zed: extract into submodule
Signed-off-by: Alex Suraci <suraci.alex@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "editors/nvim"]
 	path = editors/nvim
 	url = https://codeberg.org/vito/dang.nvim
+[submodule "editors/zed"]
+	path = editors/zed
+	url = https://codeberg.org/vito/zed-dang
