chore: track main branch for editor submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "editors/nvim"]
 	path = editors/nvim
 	url = https://codeberg.org/vito/dang.nvim
+	branch = main
 [submodule "editors/zed"]
 	path = editors/zed
 	url = https://codeberg.org/vito/zed-dang
+	branch = main
